packages/formation/sass/modules/_m-action-link.scss
a.vads-c-action-link--blue, a.vads-c-action-link--green, a.vads-c-action-link--white {
  &:before {
    font-family: "Font Awesome 5 Free";
    font-weight: 900;
    font-size: 175%;
    content: "\f138";
    position: absolute; 
    left: 0px;
    top: 4px;
  }
  font-weight: bold;
  padding: 4px 0 4px 38px;
  position: relative;
}

a.vads-c-action-link--blue:before {
  color: $color-link-default;
}

a.vads-c-action-link--green:before {
  color: $color-green;
}

a.vads-c-action-link--white {
  color: $color-white;

  &:before {
    color: $color-white;
    @include color-transition;
  }
}

a.vads-c-action-link--white:hover {
  color: $color-gold-light;
  background-color: transparent;

  &:before {
    color: $color-gold-light;
  }
}

